# qqBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODING_STYLE.md  DEPENDENCIES.md  LICENSE  README.md  main.cc  main.cpp  run.sh
controllers/: AdminController.cc  AdminController.h  AdminWebSocket.cc  AdminWebSocket.h  ProcessQQMessages.cc  ProcessQQMessages.h  qqBot_QQMessages.cc  qqBot_QQMessages.h
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  style.css  vite-env.d.ts
frontend/src/components/: AdminManager.vue  ChatRecords.vue  CustomTools.vue  EmojiManager.vue  GroupManager.vue  KBConfig.vue  LLMConfig.vue  MemoryConfig.vue  NavIcon.vue  PromptEditor.vue  QQConfig.vue
frontend/src/composables/: useToast.ts
include/: ApiClient.hpp  BotMemory.hpp  CommandHandler.hpp  Config.hpp  GroupConfigManager.hpp  MemoryService.hpp  MessageService.hpp  Prompt.hpp  QQMessage.hpp  tool.h
include/agent/: AgentSystem.hpp  AgentToolManager.hpp  AgentTypes.hpp  ExecutorAgent.hpp  PlannerAgent.hpp  RouterAgent.hpp
include/api/: ApiClient.hpp
include/config/: Config.hpp
include/handler/: CommandHandler.hpp
include/model/: ChatRecordManager.hpp  GroupConfigManager.hpp  MemoryManager.hpp  QQMessage.hpp
include/service/: MemoryService.hpp  MessageService.hpp  PromptService.hpp  RAGFlowClient.hpp  ToolRegistry.hpp  WebSocketManager.hpp
include/storage/: Database.hpp  Statement.hpp
include/util/: Log.hpp  Prompt.hpp  tool.h
public/: admin.html
src/agent/: AgentSystem.cpp  AgentToolManager.cpp  AgentTypes.cpp  ExecutorAgent.cpp  PlannerAgent.cpp  RouterAgent.cpp
src/api/: ApiClient.cpp
src/config/: Config.cpp
src/handler/: CommandHandler.cpp
src/model/: ChatRecordManager.cpp  GroupConfigManager.cpp  MemoryManager.cpp  QQMessage.cpp
src/service/: MemoryService.cpp  MessageService.cpp  PromptService.cpp  RAGFlowClient.cpp  ToolRegistry.cpp  WebSocketManager.cpp
src/storage/: Database.cpp  Statement.cpp
src/util/: Log.cpp  Prompt.cpp
